--- a/zadanie1_zabr.html
+++ b/zadanie1_zabr.html
@@ -8,11 +8,8 @@
 <BODY>
 <SCRIPT>
 document.write("*******************".fontcolor("#FF00FF")+"<br>");
-document.write("*".fontcolor("#FF00FF")+"&nbsp;&nbsp;&nbsp;Imię ucznia 
-".fontcolor("green")+"&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-*".fontcolor("#FF00FF")+"<br>");
-document.write("*".fontcolor("#FF00FF")+"&nbsp;&nbsp;&nbsp;Nazwisko ucznia 
-".fontcolor("green")+"&nbsp;&nbsp;*".fontcolor("#FF00FF")+"<br>");
+document.write("*".fontcolor("#FF00FF")+"&nbsp;&nbsp;&nbsp;Imię ucznia ".fontcolor("green")+"&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;*".fontcolor("#FF00FF")+"<br>");
+document.write("*".fontcolor("#FF00FF")+"&nbsp;&nbsp;&nbsp;Nazwisko ucznia ".fontcolor("green")+"&nbsp;&nbsp;*".fontcolor("#FF00FF")+"<br>");
 document.write("*******************".fontcolor("#FF00FF")+"<br>");
 </SCRIPT>
 </BODY>
