--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <BODY>
 <SCRIPT>
 document.write("*******************".fontcolor("#FF00FF")+"<br>");
-document.write("*".fontcolor("#FF00FF")+"&nbsp;&nbsp;&nbsp;Bartosz".fontcolor("green")+"&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;*".fontcolor("#FF00FF")+"<br>");
-document.write("*".fontcolor("#FF00FF")+"&nbsp;&nbsp;&nbsp;Zabrocki".fontcolor("green")+"&nbsp;&nbsp;*".fontcolor("#FF00FF")+"<br>");
+document.write("*".fontcolor("#FF00FF")+"&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Bartosz".fontcolor("green")+"&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;*".fontcolor("#FF00FF")+"<br>");
+document.write("*".fontcolor("#FF00FF")+"&nbsp;&nbsp;&nbsp;&nbsp;Zabrocki".fontcolor("green")+"&nbsp;&nbsp;&nbsp;*".fontcolor("#FF00FF")+"<br>");
 document.write("*******************".fontcolor("#FF00FF")+"<br>");
 </SCRIPT>
 </BODY>
