--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
  </HEAD>
 <BODY>
 <SCRIPT>
-document.write("*******************".fontcolor("#FF00FF")+"<br>");
-document.write("*".fontcolor("#FF00FF")+"&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Bartosz".fontcolor("green")+"&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;*".fontcolor("#FF00FF")+"<br>");
-document.write("*".fontcolor("#FF00FF")+"&nbsp;&nbsp;&nbsp;&nbsp;Zabrocki".fontcolor("green")+"&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;*".fontcolor("#FF00FF")+"<br>");
-document.write("*******************".fontcolor("#FF00FF")+"<br>");
+document.write("+++++++++++++++++++".fontcolor("#008000")+"<br>");
+document.write("+".fontcolor("#008000")+"&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Bartosz".fontcolor("teal")+"&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;+".fontcolor("#008000")+"<br>");
+document.write("+".fontcolor("#008000")+"&nbsp;&nbsp;&nbsp;&nbsp;Zabrocki".fontcolor("teal")+"&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;+".fontcolor("#008000")+"<br>");
+document.write("+++++++++++++++++++".fontcolor("#008000")+"<br>");
 </SCRIPT>
 </BODY>
 </HTML>
