--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <BODY>
 <SCRIPT>
 document.write("+++++++++++++++++++".fontcolor("#008000")+"<br>");
-document.write("+".fontcolor("#008000")+"&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Bartosz".fontcolor("teal")+"&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;+".fontcolor("#008000")+"<br>");
-document.write("+".fontcolor("#008000")+"&nbsp;&nbsp;&nbsp;&nbsp;Zabrocki".fontcolor("teal")+"&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;+".fontcolor("#008000")+"<br>");
+document.write("+".fontcolor("#008000")+"&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Bartosz".fontcolor("teal")+"&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;+".fontcolor("#008000")+"<br>");
+document.write("+".fontcolor("#008000")+"&nbsp;&nbsp;&nbsp;&nbsp;Zabrocki".fontcolor("teal")+"&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;+".fontcolor("#008000")+"<br>");
 document.write("+++++++++++++++++++".fontcolor("#008000")+"<br>");
 </SCRIPT>
 </BODY>
