--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 					<p><font color="blue">linki do zadań</font></p>
 			<ul>
 						<li><a href="zadanie1_zabr.html" target="strony">Zadanie 1</a></li>
-				
+						<li><a href="zadanie2_zabr.html" target="strony">Zadanie 2</a></li>
 
 			</ul>
 		</td>
