--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 			<ul>
 						<li><a href="zadanie1_zabr.html" target="strony">Zadanie 1</a></li>
 						<li><a href="zadanie2_zabr.html" target="strony">Zadanie 2</a></li>
+						<li><a href="zadanie3_zabr.html" target="strony">Zadanie 3</a></li>
+
 
 			</ul>
 		</td>
