--- a/zadanie4_zabr.html
+++ b/zadanie4_zabr.html
@@ -18,6 +18,7 @@ function okno_zamknij()
  </script>
  </head>
 <body>
+ <a style="color:Red" font-size:"2cm" > Szkielet zaliczeniowy JavaScript Bartosz Zabrocki Klasa 3Fgr2 </a>
  <form>
  <input type="button_z3" name="zadanie3" value="zadanie3 Zabrocki" onclick="WinOpen_z3(' ')">
  <input type="button_z4" name="zadanie4" value="zadanie4 Zabrocki" onclick="WinOpen_z4(' ')">
