--- a/zadanie4_zabr.html
+++ b/zadanie4_zabr.html
@@ -5,11 +5,11 @@
  <script language="JavaScript">
  function WinOpen_z3() 
  {
-window.open("z3_zabr.html","okienko_z3","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=200");
+window.open("zadanie3_zabr.html","okienko_z3","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=200");
  }
 function WinOpen_z4() 
  {
-window.open("z4_zabr.html","okienko_z4","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400");
+window.open("zadanie4_zabr.html","okienko_z4","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400");
  }
 function okno_zamknij() 
  {
