--- a/zadanie4_zabr.html
+++ b/zadanie4_zabr.html
@@ -3,7 +3,7 @@
  <title> ZABROCKI 3Fgr2 </title>
 
  <script language="JavaScript">
- function WinOpen_z3() 
+ function WinOpen_zadanie3() 
  {
 window.open("zadanie3_zabr.html","okienko_z3","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=200");
  }
