--- a/zadanie3_zabr.html
+++ b/zadanie3_zabr.html
@@ -2,7 +2,7 @@
  <head>
  <title>Zabrocki 3Fgr2</title>
  <script language="JavaScript">
- function WinOpen() 
+ function WinOpen_Zabrocki() 
  {
 window.open("obraz.html","okienko","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=200");
  }
