--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
  {
 window.open("zadanie3_zabr.html","okienko_z3","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=200");
  }
-function WinOpen_z4() 
+function WinOpen_zadanie4() 
  {
 window.open("zadanie4_zabr.html","okienko_z4","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400");
  }
@@ -20,8 +20,8 @@ function okno_zamknij()
 <body>
  <a style="color:Red" font-size:"2cm" > Szkielet zaliczeniowy JavaScript Bartosz Zabrocki Klasa 3Fgr2 </a>
  <form>
- <input type="button_z3" name="zadanie3" value="zadanie3 Zabrocki" onclick="WinOpen_z3(' ')">
- <input type="button_z4" name="zadanie4" value="zadanie4 Zabrocki" onclick="WinOpen_z4(' ')">
+ <input type="button_z3" name="zadanie3" value="zadanie3 Zabrocki" onclick="WinOpen_zadanie3(' ')">
+ <input type="button_z4" name="zadanie4" value="zadanie4 Zabrocki" onclick="WinOpen_zadanie4(' ')">
  <input type="button" value="zamknij okno" onclick="okno_zamknij()"/>
  </form>
 </body>
