--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@ function okno_zamknij()
 <body>
  <a style="color:Red" font-size:"2cm" > Szkielet zaliczeniowy JavaScript Bartosz Zabrocki Klasa 3Fgr2 </a>
  <form>
+ <input type="button_z1" name="zadanie1" value="zadanie1 Zabrocki" onclick="WinOpen_zadanie1(' ')">
  <input type="button_z2" name="zadanie2" value="zadanie2 Zabrocki" onclick="WinOpen_zadanie2(' ')">
  <input type="button_z3" name="zadanie3" value="zadanie3 Zabrocki" onclick="WinOpen_zadanie3(' ')">
  <input type="button_z4" name="zadanie4" value="zadanie4 Zabrocki" onclick="WinOpen_zadanie4(' ')">
