--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@ function WinOpen_zadanie4()
  {
 window.open("zadanie4_zabr.html","okienko_z4","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400");
  }
+ function WinOpen_zadanie7() 
+ {
+window.open("zadanie7_zabr.html","okienko_z7","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400");
+ }
 function okno_zamknij() 
  {
  window.close()
@@ -32,6 +36,7 @@ function okno_zamknij()
  <input type="button_z2" name="zadanie2" value="zadanie2 Zabrocki" onclick="WinOpen_zadanie2(' ')">
  <input type="button_z3" name="zadanie3" value="zadanie3 Zabrocki" onclick="WinOpen_zadanie3(' ')">
  <input type="button_z4" name="zadanie4" value="zadanie4 Zabrocki" onclick="WinOpen_zadanie4(' ')">
+ <input type="button_z7" name="zadanie7" value="zadanie7 Zabrocki" onclick="WinOpen_zadanie7(' ')">
  <input type="button" value="zamknij okno" onclick="okno_zamknij()"/>
  </form>
 </body>
