--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@ window.open("zadanie7_zabr.html","okienko_z7","toolbar=no,directories=no,menubar
  {
 window.open("zadanie8_zabr.html","okienko_z8","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400");
  }
+ function WinOpen_zadanie9() 
+ {
+window.open("zadanie9_zabr.html","okienko_z9","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400");
+ }
 function okno_zamknij() 
  {
  window.close()
@@ -41,8 +45,8 @@ function okno_zamknij()
  <input type="button_z3" name="zadanie3" value="zadanie3 Zabrocki" onclick="WinOpen_zadanie3(' ')">
  <input type="button_z4" name="zadanie4" value="zadanie4 Zabrocki" onclick="WinOpen_zadanie4(' ')">
  <input type="button_z7" name="zadanie7" value="zadanie7 Zabrocki" onclick="WinOpen_zadanie7(' ')">
- <input type="button_z8" name="zadanie7" value="zadanie8 Zabrocki" onclick="WinOpen_zadanie8(' ')">
-
+ <input type="button_z8" name="zadanie8" value="zadanie8 Zabrocki" onclick="WinOpen_zadanie8(' ')">
+ <input type="button_z9" name="zadanie9" value="zadanie9 Zabrocki" onclick="WinOpen_zadanie9(' ')">
  <input type="button" value="zamknij okno" onclick="okno_zamknij()"/>
  </form>
 </body>
