--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@ window.open("zadanie8_zabr.html","okienko_z8","toolbar=no,directories=no,menubar
  {
 window.open("zadanie9_zabr.html","okienko_z9","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400");
  }
+function WinOpen_zadanie10() 
+ {
+window.open("zadanie10_zabr.html","okienko_z10","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400");
+ }
 function okno_zamknij() 
  {
  window.close()
@@ -47,6 +51,7 @@ function okno_zamknij()
  <input type="button_z7" name="zadanie7" value="zadanie7 Zabrocki" onclick="WinOpen_zadanie7(' ')">
  <input type="button_z8" name="zadanie8" value="zadanie8 Zabrocki" onclick="WinOpen_zadanie8(' ')">
  <input type="button_z9" name="zadanie9" value="zadanie9 Zabrocki" onclick="WinOpen_zadanie9(' ')">
+ <input type="button_z10" name="zadanie10" value="zadanie10 Zabrocki" onclick="WinOpen_zadanie10(' ')">
  <input type="button" value="zamknij okno" onclick="okno_zamknij()"/>
  </form>
 </body>
