--- a/zadanie8_zabr.html
+++ b/zadanie8_zabr.html
@@ -7,7 +7,7 @@
  if (r==true) 
  { document.write("Nacisnąłeś OK!"); } 
  else 
- { document.write("Nacisnąłeś Cancel!"); } 
+ { document.write("Nacisnąłeś Anuluj!"); } 
  } 
 18
 </script> 
