--- a/grafika1.html
+++ b/grafika1.html
@@ -9,7 +9,7 @@
  </head>
 <body>
  Geralt z Rivi
- <img src="grafika1.gif" />
+ <img src="grafika1.webp" />
  <input type="button" value="zamknij okno" onclick="okno_zamknij()"/>
 </body>
 </html>
