--- a/zadanie11_zabr.html
+++ b/zadanie11_zabr.html
@@ -1,1 +1,21 @@
+<!DOCTYPE html> 
+ <head> 
+ <title> ZABROCKI 3F </title> 
+ <meta charset="utf-8"> 
+ </head> 
+<body>
+<div style="color:red;font-size:50px;">
+ <script language="JavaScript">
+var liczba1=prompt("liczba1=","");
+var liczba2=prompt("liczba2=","");
+var suma;
+   
+ var a=parseFloat(liczba1);
+ var b=parseFloat(liczba2);
+ suma=(a-b)*3600;
+ document.write("suma=( "+a+" - "+b+") * 3600 = "+suma+"<br>");
+ </script>
+</div>
+</body>
+</html>
 
