--- a/zadanie11_zabr.html
+++ b/zadanie11_zabr.html
@@ -4,16 +4,17 @@
  <meta charset="utf-8"> 
  </head> 
 <body>
-<div style="color:red;font-size:50px;">
+<div id="result" style="color:green;font-size:33px;">
  <script language="JavaScript">
-var liczba1=prompt("liczba1=","");
-var liczba2=prompt("liczba2=","");
-var suma;
+var D1_Zabr=prompt("Data nr 1","");
+var D2_Zabr=prompt("Data nr 2","");
    
- var a=parseFloat(liczba1);
- var b=parseFloat(liczba2);
- suma=(a-b)*3600;
- document.write("suma=( "+a+" - "+b+") * 3600 = "+suma+"<br>");
+var D1=parseFloat(D1_Zabr);
+var D2=parseFloat(D2_Zabr);
+
+var iloscsekund = (D1-D2) * 24 * 60 * 60;
+  
+document.getElementById("result").innerHTML = "Ilość sekund" + iloscSekund+ "sekund" ;
  </script>
 </div>
 </body>
