--- a/index.html
+++ b/index.html
@@ -39,6 +39,14 @@ function WinOpen_zadanie10()
  {
 window.open("zadanie10_zabr.html","okienko_z10","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400");
  }
+ function WinOpen_zadanie11() 
+ {
+window.open("zadanie11_zabr.html","okienko_z11","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400");
+ }
+ function WinOpen_zadanie11_kod() 
+ {
+window.open("zadanie11_kod_zabr.html","okienko_z11_kod","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400");
+ }
 function okno_zamknij() 
  {
  window.close()
@@ -57,6 +65,8 @@ function okno_zamknij()
  <input type="button_z8" name="zadanie8" value="zadanie8 Zabrocki" onclick="WinOpen_zadanie8(' ')">
  <input type="button_z9" name="zadanie9" value="zadanie9 Zabrocki" onclick="WinOpen_zadanie9(' ')">
  <input type="button_z10" name="zadanie10" value="zadanie10 Zabrocki" onclick="WinOpen_zadanie10(' ')">
+ <input type="button_z11" name="zadanie11" value="zadanie11 Zabrocki" onclick="WinOpen_zadanie11(' ')">
+ <input type="button_z11_kod" name="zadanie11_kod" value="zadanie11_kod Zabrocki" onclick="WinOpen_zadanie11_kod(' ')">
  <input type="button" value="zamknij okno" onclick="okno_zamknij()"/>
  </form>
 </body>
