--- a/zadanie11_kod_zabr.html
+++ b/zadanie11_kod_zabr.html
@@ -10,8 +10,30 @@
 </head>
 <body>
  <form>
- <textarea name="zadanie 11 KOD" cols="80" rows="40" readonly>
+ <textarea name="zadanie 11 KOD" cols="80" rows="22" readonly>
+  
+<!DOCTYPE html> 
+ <head> 
+ <title> ZABROCKI 3F </title> 
+ <meta charset="utf-8"> 
+ </head> 
+<body>
+<div id="result" style="color:green;font-size:33px;">
+ <script language="JavaScript">
+var D1_Zabr=prompt("Data nr 1","");
+var D2_Zabr=prompt("Data nr 2","");
+   
+var D1=parseFloat(D1_Zabr);
+var D2=parseFloat(D2_Zabr);
 
+var iloscsekund = (D1-D2) * 24 * 60 * 60;
+  
+document.getElementById("result").innerHTML = "Ilość sekund" + iloscSekund+ "sekund" ;
+ </script>
+</div>
+</body>
+</html>
+  
  </textarea>
 </form>
 <input type="button" value="zamknij okno" onclick="okno_zamknij()"/>
