--- a/zadanie11_zabr.html
+++ b/zadanie11_zabr.html
@@ -5,16 +5,17 @@
  </head> 
 <body>
 <div id="result" style="color:green;font-size:33px;">
- <script language="JavaScript">
+<script language="JavaScript">
+  
 var D1_Zabr=prompt("Data nr 1","");
 var D2_Zabr=prompt("Data nr 2","");
    
-var D1=parseFloat(D1_Zabr);
-var D2=parseFloat(D2_Zabr);
+var D1 = parseFloat(D1_Zabr);
+var D2 = parseFloat(D2_Zabr);
 
-var iloscsekund = (D1-D2) * 24 * 60 * 60;
+var iloscSekund = (D1-D2) * 24 * 60 * 60;
   
-document.getElementById("result").innerHTML = "Ilość sekund" + iloscSekund+ "sekund" ;
+document.getElementById("result").innerHTML = "Ilość sekund" + iloscSekund + "sekund" ;
  </script>
 </div>
 </body>
