--- a/zadanie12_zabr.html
+++ b/zadanie12_zabr.html
@@ -6,9 +6,12 @@
 <body>
 <div style="color:rgb(7, 82, 95);font-size:100px;">
  <script language="JavaScript">
+
  var liczba1=prompt("liczba1=","");
  var m_zabr=parseFloat(liczba1);
  
- document.write(1/m_zabr"=" 1/1+m_zabr "+" 1/m_zabr(m_zabr+1));
+ document.write("1/"+m_zabr+"=" );
+ document.write("1/"+(1+m_zabr)+ "+");
+ document.write("1/"+(m_zabr* (m_zabr+1))+ "<br>");
  </script>
 </div>
