--- a/zadanie13_zabr_kod.html
+++ b/zadanie13_zabr_kod.html
@@ -1,6 +1,16 @@
-
-
-
+<html>
+<head>
+ <script type="text/javascript">
+ function okno_zamknij()
+ {
+ window.close()
+ }
+ </script>
+</head>
+<body>
+ <form>
+ <textarea name="zadanie 13 KOD" cols="80" rows="22" readonly>
+  
 <!DOCTYPE html> 
  <head> 
  <title> Zabrocki 3F </title> 
@@ -18,3 +28,14 @@
  document.write("1/"+(m_zabr* (m_zabr+1))+ "<br>");
  </script>
 </div>
+
+  
+ </textarea>
+</form>
+<input type="button" value="zamknij okno" onclick="okno_zamknij()"/>
+<script type="text/javascript">
+</script>
+</body>
+</html
+
+
