--- a/zadanie11_zabr.html
+++ b/zadanie11_zabr.html
@@ -15,7 +15,7 @@ var D2 = parseFloat(D2_Zabr);
 
 var iloscSekund = (D1-D2) * 24 * 60 * 60;
   
-document.getElementById("result").innerHTML = "Ilość sekund" + iloscSekund + "sekund" ;
+document.getElementById("result").innerHTML = "Ilość sekund" + iloscSekund + "sekund" "<br>";
 document.write("dzień_1="+D1_Zabr+ "<br>");
 document.write("dzień_2="+D2_Zabr+ "<br>");
  </script>
