--- a/index.html
+++ b/index.html
@@ -47,6 +47,14 @@ window.open("zadanie11_zabr.html","okienko_z11","toolbar=no,directories=no,menub
  {
 window.open("zadanie11_kod_zabr.html","okienko_z11_kod","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400");
  }
+ function WinOpen_zadanie13() 
+ {
+window.open("zadanie13_zabr.html","okienko_z13","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400");
+ }
+ function WinOpen_zadanie13_kod() 
+ {
+window.open("zadanie13_kod_zabr.html","okienko_z13_kod","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400");
+ }
 function okno_zamknij() 
  {
  window.close()
@@ -67,6 +75,8 @@ function okno_zamknij()
  <input type="button_z10" name="zadanie10" value="zadanie10 Zabrocki" onclick="WinOpen_zadanie10(' ')">
  <input type="button_z11" name="zadanie11" value="zadanie11 Zabrocki" onclick="WinOpen_zadanie11(' ')">
  <input type="button_z11_kod" name="zadanie11_kod" value="zadanie11_kod Zabrocki" onclick="WinOpen_zadanie11_kod(' ')">
+ <input type="button_z13" name="zadanie13" value="zadanie13 Zabrocki" onclick="WinOpen_zadanie13(' ')">
+ <input type="button_z13_kod" name="zadanie13_kod" value="zadanie13_kod Zabrocki" onclick="WinOpen_zadanie13_kod(' ')">
  <input type="button" value="zamknij okno" onclick="okno_zamknij()"/>
  </form>
 </body>
