--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ window.open("zadanie13_zabr.html","okienko_z13","toolbar=no,directories=no,menub
  }
  function WinOpen_zadanie13_kod() 
  {
-window.open("zadanie13_kod_zabr.html","okienko_z13_kod","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400");
+window.open("zadanie13_zabr_kod.html","okienko_z13_kod","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400");
  }
 function okno_zamknij() 
  {
