--- a/zadanie15_zabr_kod.html
+++ b/zadanie15_zabr_kod.html
@@ -12,23 +12,23 @@
  <form>
  <textarea name="zadanie 13 KOD" cols="80" rows="22" readonly>
   
-<!DOCTYPE html> 
- <head> 
- <title> Zabrocki 3F </title> 
- <meta charset="utf-8"> 
- </head> 
+<!DOCTYPE html>
+<head>
+<title>Zadanie 15 Zabrocki</title>
+<meta charset="utf-8" >
+</head>
 <body>
-<div style="color:rgb(7, 82, 95);font-size:100px;">
- <script language="JavaScript">
+<div style="color: rgb(207, 70, 70);font-size: 100px ;">
+<script language="JavaScript">
+var liczba1=prompt("liczba1=","");
+var m_zabr=parseFloat(liczba1);
 
- var liczba1=prompt("liczba1=","");
- var m_zabr=parseFloat(liczba1);
- 
- document.write("1/"+m_zabr+"=" );
- document.write("1/"+(1+m_zabr)+ "+");
- document.write("1/"+(m_zabr* (m_zabr+1))+ "<br>");
- </script>
+document.write("1/"+m_zabr+"=");
+document.write("1/"+(2*m_zabr)+ "+");
+document.write("1/"+(2*m_zabr)+"<br>");
+</script>
 </div>
+</body>
   
  </textarea>
 </form>
