--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@ window.open("zadanie13_zabr.html","okienko_z13","toolbar=no,directories=no,menub
  {
 window.open("zadanie13_zabr_kod.html","okienko_z13_kod","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400");
  }
+ function WinOpen_zadanie14() 
+ {
+window.open("zadanie14_zabr.html","okienko_z14","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400");
+ }
  function WinOpen_zadanie15() 
  {
 window.open("zadanie15_zabr.html","okienko_z15","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400");
@@ -85,6 +89,7 @@ function okno_zamknij()
  <input type="button_z11_kod" name="zadanie11_kod" value="zadanie11_kod Zabrocki" onclick="WinOpen_zadanie11_kod(' ')">
  <input type="button_z13" name="zadanie13" value="zadanie13 Zabrocki" onclick="WinOpen_zadanie13(' ')">
  <input type="button_z13_kod" name="zadanie13_kod" value="zadanie13_kod Zabrocki" onclick="WinOpen_zadanie13_kod(' ')">
+ <input type="button_z14" name="zadanie14" value="zadanie14 Zabrocki" onclick="WinOpen_zadanie14(' ')">
  <input type="button_z15" name="zadanie15" value="zadanie15 Zabrocki" onclick="WinOpen_zadanie15(' ')">
  <input type="button_z15_kod" name="zadanie15_kod" value="zadanie15_kod Zabrocki" onclick="WinOpen_zadanie15_kod(' ')">
  <input type="button" value="zamknij okno" onclick="okno_zamknij()"/>
