--- a/index.html
+++ b/index.html
@@ -67,6 +67,14 @@ window.open("zadanie15_zabr.html","okienko_z15","toolbar=no,directories=no,menub
  {
 window.open("zadanie15_zabr_kod.html","okienko_z15_kod","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400");
  }
+ function WinOpen_zadanie16() 
+ {
+window.open("zadanie16_zabr.html","okienko_z16","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400");
+ }
+ function WinOpen_zadanie16_kod() 
+ {
+window.open("zadanie16_kod_zabr.html","okienko_z16_kod","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400");
+ }
 function okno_zamknij() 
  {
  window.close()
@@ -92,6 +100,8 @@ function okno_zamknij()
  <input type="button_z14" name="zadanie14" value="zadanie14 Zabrocki" onclick="WinOpen_zadanie14(' ')">
  <input type="button_z15" name="zadanie15" value="zadanie15 Zabrocki" onclick="WinOpen_zadanie15(' ')">
  <input type="button_z15_kod" name="zadanie15_kod" value="zadanie15_kod Zabrocki" onclick="WinOpen_zadanie15_kod(' ')">
+ <input type="button_z16" name="zadanie16" value="zadanie16 Zabrocki" onclick="WinOpen_zadanie16(' ')">
+ <input type="button_z16_kod" name="zadanie16_kod" value="zadanie16_kod Zabrocki" onclick="WinOpen_zadanie16_kod(' ')">
  <input type="button" value="zamknij okno" onclick="okno_zamknij()"/>
  </form>
 </body>
