--- a/zadanie16_zabr.html
+++ b/zadanie16_zabr.html
@@ -12,7 +12,7 @@
                 var a_zie=parseFloat(liczba1);
                 var liczba2=prompt("B=","");
                 var b_zab=parseFloat(liczba2);
-            document.write("A="+a_zie+" "+"B="+b_zab+"<br>");
+            document.write("A="+a_zab+" "+"B="+b_zab+"<br>");
 
 
                 var c_zab=a_zab*a_zab*a_zab;
