--- a/zadanie16_zabr.html
+++ b/zadanie16_zabr.html
@@ -9,7 +9,7 @@
         <div style="color: rgb(16, 165, 120);font-size: 100px;">
             <script>
                 var liczba1=prompt("A=","");
-                var a_zie=parseFloat(liczba1);
+                var a_zab=parseFloat(liczba1);
                 var liczba2=prompt("B=","");
                 var b_zab=parseFloat(liczba2);
             document.write("A="+a_zab+" "+"B="+b_zab+"<br>");
