--- a/index.html
+++ b/index.html
@@ -84,24 +84,24 @@ function okno_zamknij()
 <body>
  <a style="color:Red" font-size:"2cm" > Szkielet zaliczeniowy JavaScript Bartosz Zabrocki Klasa 3Fgr2 </a>
  <form>
- <input type="button_z1" name="zadanie1" value="zadanie1 Zabrocki" onclick="WinOpen_zadanie1(' ')">
- <input type="button_z2" name="zadanie2" value="zadanie2 Zabrocki" onclick="WinOpen_zadanie2(' ')">
- <input type="button_z3" name="zadanie3" value="zadanie3 Zabrocki" onclick="WinOpen_zadanie3(' ')">
- <input type="button_z4" name="zadanie4" value="zadanie4 Zabrocki" onclick="WinOpen_zadanie4(' ')">
- <input type="button_z5" name="zadanie5" value="zadanie5 Zabrocki" onclick="WinOpen_zadanie5(' ')">
- <input type="button_z7" name="zadanie7" value="zadanie7 Zabrocki" onclick="WinOpen_zadanie7(' ')">
- <input type="button_z8" name="zadanie8" value="zadanie8 Zabrocki" onclick="WinOpen_zadanie8(' ')">
- <input type="button_z9" name="zadanie9" value="zadanie9 Zabrocki" onclick="WinOpen_zadanie9(' ')">
- <input type="button_z10" name="zadanie10" value="zadanie10 Zabrocki" onclick="WinOpen_zadanie10(' ')">
- <input type="button_z11" name="zadanie11" value="zadanie11 Zabrocki" onclick="WinOpen_zadanie11(' ')">
- <input type="button_z11_kod" name="zadanie11_kod" value="zadanie11_kod Zabrocki" onclick="WinOpen_zadanie11_kod(' ')">
- <input type="button_z13" name="zadanie13" value="zadanie13 Zabrocki" onclick="WinOpen_zadanie13(' ')">
- <input type="button_z13_kod" name="zadanie13_kod" value="zadanie13_kod Zabrocki" onclick="WinOpen_zadanie13_kod(' ')">
- <input type="button_z14" name="zadanie14" value="zadanie14 Zabrocki" onclick="WinOpen_zadanie14(' ')">
- <input type="button_z15" name="zadanie15" value="zadanie15 Zabrocki" onclick="WinOpen_zadanie15(' ')">
- <input type="button_z15_kod" name="zadanie15_kod" value="zadanie15_kod Zabrocki" onclick="WinOpen_zadanie15_kod(' ')">
- <input type="button_z16" name="zadanie16" value="zadanie16 Zabrocki" onclick="WinOpen_zadanie16(' ')">
- <input type="button_z16_kod" name="zadanie16_kod" value="zadanie16_kod Zabrocki" onclick="WinOpen_zadanie16_kod(' ')">
+ <input type="button" name="zadanie1" value="zadanie1 Zabrocki" onclick="WinOpen_zadanie1(' ')">
+ <input type="button" name="zadanie2" value="zadanie2 Zabrocki" onclick="WinOpen_zadanie2(' ')">
+ <input type="button" name="zadanie3" value="zadanie3 Zabrocki" onclick="WinOpen_zadanie3(' ')">
+ <input type="button" name="zadanie4" value="zadanie4 Zabrocki" onclick="WinOpen_zadanie4(' ')">
+ <input type="button" name="zadanie5" value="zadanie5 Zabrocki" onclick="WinOpen_zadanie5(' ')">
+ <input type="button" name="zadanie7" value="zadanie7 Zabrocki" onclick="WinOpen_zadanie7(' ')">
+ <input type="button" name="zadanie8" value="zadanie8 Zabrocki" onclick="WinOpen_zadanie8(' ')">
+ <input type="button" name="zadanie9" value="zadanie9 Zabrocki" onclick="WinOpen_zadanie9(' ')">
+ <input type="button" name="zadanie10" value="zadanie10 Zabrocki" onclick="WinOpen_zadanie10(' ')">
+ <input type="button" name="zadanie11" value="zadanie11 Zabrocki" onclick="WinOpen_zadanie11(' ')">
+ <input type="button" name="zadanie11_kod" value="zadanie11_kod Zabrocki" onclick="WinOpen_zadanie11_kod(' ')">
+ <input type="button" name="zadanie13" value="zadanie13 Zabrocki" onclick="WinOpen_zadanie13(' ')">
+ <input type="button" name="zadanie13_kod" value="zadanie13_kod Zabrocki" onclick="WinOpen_zadanie13_kod(' ')">
+ <input type="button" name="zadanie14" value="zadanie14 Zabrocki" onclick="WinOpen_zadanie14(' ')">
+ <input type="button" name="zadanie15" value="zadanie15 Zabrocki" onclick="WinOpen_zadanie15(' ')">
+ <input type="button" name="zadanie15_kod" value="zadanie15_kod Zabrocki" onclick="WinOpen_zadanie15_kod(' ')">
+ <input type="button" name="zadanie16" value="zadanie16 Zabrocki" onclick="WinOpen_zadanie16(' ')">
+ <input type="button" name="zadanie16_kod" value="zadanie16_kod Zabrocki" onclick="WinOpen_zadanie16_kod(' ')">
  <input type="button" value="zamknij okno" onclick="okno_zamknij()"/>
  </form>
 </body>
