--- a/index.html
+++ b/index.html
@@ -75,7 +75,23 @@ window.open("zadanie16_zabr.html","okienko_z16","toolbar=no,directories=no,menub
  {
 window.open("zadanie16_kod_zabr.html","okienko_z16_kod","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400");
  }
-function okno_zamknij() 
+ function WinOpen_zadanie18() 
+ {
+window.open("zadanie18_zabr.html","okienko_z18","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400");
+ }
+ function WinOpen_zadanie18_kod() 
+ {
+window.open("zadanie18_kod_zabr.html","okienko_z18_kod","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400");
+ }
+ function WinOpen_zadanie19() 
+ {
+window.open("zadanie19_zabr.html","okienko_z19","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400");
+ }
+ function WinOpen_zadanie19_kod() 
+ {
+window.open("zadanie19_kod_zabr.html","okienko_z19_kod","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400");
+ }
+ function okno_zamknij() 
  {
  window.close()
  }
@@ -102,6 +118,10 @@ function okno_zamknij()
  <input type="button" name="zadanie15_kod" value="zadanie15_kod Zabrocki" onclick="WinOpen_zadanie15_kod(' ')">
  <input type="button" name="zadanie16" value="zadanie16 Zabrocki" onclick="WinOpen_zadanie16(' ')">
  <input type="button" name="zadanie16_kod" value="zadanie16_kod Zabrocki" onclick="WinOpen_zadanie16_kod(' ')">
+ <input type="button" name="zadanie18" value="zadanie18 Zabrocki" onclick="WinOpen_zadanie18(' ')">
+ <input type="button" name="zadanie18_kod" value="zadanie18_kod Zabrocki" onclick="WinOpen_zadanie18_kod(' ')">
+ <input type="button" name="zadanie19" value="zadanie19 Zabrocki" onclick="WinOpen_zadanie19(' ')">
+ <input type="button" name="zadanie19_kod" value="zadanie19_kod Zabrocki" onclick="WinOpen_zadanie19_kod(' ')">
  <input type="button" value="zamknij okno" onclick="okno_zamknij()"/>
  </form>
 </body>
