--- a/index.html
+++ b/index.html
@@ -91,6 +91,10 @@ window.open("zadanie19_zabr.html","okienko_z19","toolbar=no,directories=no,menub
  {
 window.open("zadanie19_kod_zabr.html","okienko_z19_kod","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400");
  }
+ function WinOpen_zadanie21() 
+ {
+window.open("zadanie21_zabr.html","okienko_z21","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400");
+ }
  function okno_zamknij() 
  {
  window.close()
@@ -122,6 +126,7 @@ window.open("zadanie19_kod_zabr.html","okienko_z19_kod","toolbar=no,directories=
  <input type="button" name="zadanie18_kod" value="zadanie18_kod Zabrocki" onclick="WinOpen_zadanie18_kod(' ')">
  <input type="button" name="zadanie19" value="zadanie19 Zabrocki" onclick="WinOpen_zadanie19(' ')">
  <input type="button" name="zadanie19_kod" value="zadanie19_kod Zabrocki" onclick="WinOpen_zadanie19_kod(' ')">
+ <input type="button" name="zadanie21" value="zadanie21 Zabrocki" onclick="WinOpen_zadanie21(' ')">
  <input type="button" value="zamknij okno" onclick="okno_zamknij()"/>
  </form>
 </body>
