--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ window.open("zadanie19_zabr.html","okienko_z19","toolbar=no,directories=no,menub
  }
  function WinOpen_zadanie19_kod() 
  {
-window.open("zadanie19_kod_zabr.html","okienko_z19_kod","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400");
+window.open("zadanie19_zabr_kod.html","okienko_z19_kod","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400");
  }
  function WinOpen_zadanie21() 
  {
