--- a/zadanie35_zabr_kod.html
+++ b/zadanie35_zabr_kod.html
@@ -5,22 +5,24 @@
 	<body>
 		<h1>Kod zadanie 16 Zabrocki</h1>
 		<textarea style="width: 98%; height: 300px;">
-<!DOCTYPE html> 
-    <head> 
-        <title> Użycie fukcji </title> 
-        <meta charset="utf-8"> 
-</head> 
+<html>
 <body>
-            <div style="color:navy;font-size:50px;">
-            <script language="JavaScript">
-            var a=parseFloat(prompt("a=",""));
-            var b=parseFloat(prompt("b=",""));
-            function suma_zab(a, b) {
-            return a + b;
-             }
-        document.write("suma="+suma_zab(a,b)+"<br>");
-        </script>
-    </div>
+<div style="color:red;font-size:50px;">
+    <script language="JavaScript">
+        var x=prompt("podaj liczbę x=","");
+        var a=parseFloat(x);
+        document.write("czytana liczba x="+a+"<br>"); 
+        if(a>0)
+        {document.write("czytana liczba jest większa od 0"+"<br>");}
+        if(a==0)
+        {document.write("czytana liczba jest równa 0"+"<br>");}
+        if(a<0)
+        {document.write("czytana liczba jest mniejsza od 0"+"<br>");}
+        
+        // Bartosz Zabrocki 3F
+
+</script>
+</div>
 </body>
 </html>
 		</textarea>
