--- a/index.html
+++ b/index.html
@@ -95,6 +95,22 @@ window.open("zadanie19_zabr_kod.html","okienko_z19_kod","toolbar=no,directories=
  {
 window.open("zadanie21_zabr.html","okienko_z21","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400");
  }
+ function WinOpen_zadanie28() 
+ {
+window.open("zadanie28_zabr.html","okienko_z28","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400");
+ }
+ function WinOpen_zadanie29() 
+ {
+window.open("zadanie29_zabr.html","okienko_z29","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400");
+ }
+ function WinOpen_zadanie30() 
+ {
+window.open("zadanie30_zabr.html","okienko_z30","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400");
+ }
+ function WinOpen_zadanie30_kod() 
+ {
+window.open("zadanie30_zabr_kod.html","okienko_z30_kod","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400");
+ }
  function okno_zamknij() 
  {
  window.close()
@@ -127,6 +143,10 @@ window.open("zadanie21_zabr.html","okienko_z21","toolbar=no,directories=no,menub
  <input type="button" name="zadanie19" value="zadanie19 Zabrocki" onclick="WinOpen_zadanie19(' ')">
  <input type="button" name="zadanie19_kod" value="zadanie19_kod Zabrocki" onclick="WinOpen_zadanie19_kod(' ')">
  <input type="button" name="zadanie21" value="zadanie21 Zabrocki" onclick="WinOpen_zadanie21(' ')">
+ <input type="button" name="zadanie28" value="zadanie28 Zabrocki" onclick="WinOpen_zadanie28(' ')">
+ <input type="button" name="zadanie29" value="zadanie29 Zabrocki" onclick="WinOpen_zadanie29(' ')">
+ <input type="button" name="zadanie30" value="zadanie30 Zabrocki" onclick="WinOpen_zadanie30(' ')">
+ <input type="button" name="zadanie30_kod" value="zadanie30_kod Zabrocki" onclick="WinOpen_zadanie30_kod(' ')">
  <input type="button" value="zamknij okno" onclick="okno_zamknij()"/>
  </form>
 </body>
