--- a/index.html
+++ b/index.html
@@ -111,6 +111,14 @@ window.open("zadanie30_zabr.html","okienko_z30","toolbar=no,directories=no,menub
  {
 window.open("zadanie30_zabr_kod.html","okienko_z30_kod","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400");
  }
+ function WinOpen_zadanie31() 
+ {
+window.open("zadanie31_zabr.html","okienko_z31","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400");
+ }
+ function WinOpen_zadanie31_kod() 
+ {
+window.open("zadanie31_zabr_kod.html","okienko_z31_kod","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400");
+ }
  function okno_zamknij() 
  {
  window.close()
