--- a/index.html
+++ b/index.html
@@ -155,6 +155,8 @@ window.open("zadanie31_zabr_kod.html","okienko_z31_kod","toolbar=no,directories=
  <input type="button" name="zadanie29" value="zadanie29 Zabrocki" onclick="WinOpen_zadanie29(' ')">
  <input type="button" name="zadanie30" value="zadanie30 Zabrocki" onclick="WinOpen_zadanie30(' ')">
  <input type="button" name="zadanie30_kod" value="zadanie30_kod Zabrocki" onclick="WinOpen_zadanie30_kod(' ')">
+ <input type="button" name="zadanie31" value="zadanie31 Zabrocki" onclick="WinOpen_zadanie31(' ')">
+ <input type="button" name="zadanie31_kod" value="zadanie31_kod Zabrocki" onclick="WinOpen_zadanie31_kod(' ')">
  <input type="button" value="zamknij okno" onclick="okno_zamknij()"/>
  </form>
 </body>
