--- a/zadanie32_zabr_kod.html
+++ b/zadanie32_zabr_kod.html
@@ -1,3 +1,10 @@
+<html>
+	<head>
+		<meta charset="utf-8">
+	</head>
+	<body>
+		<h1>Kod zadanie 30 Zabrocki</h1>
+		<textarea style="width: 98%; height: 300px;">
 <!DOCTYPE html>
 <html lang="pl">
 <head>
@@ -35,3 +42,7 @@
     Metoda: pokaz<br>
 </body>
 </html>
+		</textarea>
+	</body>
+</html>	
+
