--- a/index.html
+++ b/index.html
@@ -119,6 +119,14 @@ window.open("zadanie31_zabr.html","okienko_z31","toolbar=no,directories=no,menub
  {
 window.open("zadanie31_zabr_kod.html","okienko_z31_kod","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400");
  }
+ function WinOpen_zadanie32() 
+ {
+window.open("zadanie32_zabr.html","okienko_z32","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400");
+ }
+ function WinOpen_zadanie32_kod() 
+ {
+window.open("zadanie32_zabr_kod.html","okienko_z32_kod","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400");
+ }
  function okno_zamknij() 
  {
  window.close()
@@ -157,6 +165,8 @@ window.open("zadanie31_zabr_kod.html","okienko_z31_kod","toolbar=no,directories=
  <input type="button" name="zadanie30_kod" value="zadanie30_kod Zabrocki" onclick="WinOpen_zadanie30_kod(' ')">
  <input type="button" name="zadanie31" value="zadanie31 Zabrocki" onclick="WinOpen_zadanie31(' ')">
  <input type="button" name="zadanie31_kod" value="zadanie31_kod Zabrocki" onclick="WinOpen_zadanie31_kod(' ')">
+ <input type="button" name="zadanie32" value="zadanie32 Zabrocki" onclick="WinOpen_zadanie32(' ')">
+ <input type="button" name="zadanie32_kod" value="zadanie32_kod Zabrocki" onclick="WinOpen_zadanie32_kod(' ')">
  <input type="button" value="zamknij okno" onclick="okno_zamknij()"/>
  </form>
 </body>
