--- a/index.html
+++ b/index.html
@@ -127,6 +127,54 @@ window.open("zadanie32_zabr.html","okienko_z32","toolbar=no,directories=no,menub
  {
 window.open("zadanie32_zabr_kod.html","okienko_z32_kod","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400");
  }
+ function WinOpen_zadanie35() 
+ {
+window.open("zadanie35_zabr.html","okienko_z35","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400");
+ }
+ function WinOpen_zadanie35_kod() 
+ {
+window.open("zadanie35_zabr_kod.html","okienko_z35_kod","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400");
+ }
+ function WinOpen_zadanie36() 
+ {
+window.open("zadanie36_zabr.html","okienko_z36","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400");
+ }
+  function WinOpen_zadanie36_kod() 
+ {
+window.open("zadanie36_zabr_kod.html","okienko_z36_kod","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400");
+ }
+ function WinOpen_zadanie37() 
+ {
+window.open("zadanie37_zabr.html","okienko_z37","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400");
+ }
+ function WinOpen_zadanie37_kod() 
+ {
+window.open("zadanie37_zabr_kod.html","okienko_z37_kod","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400");
+ }
+ function WinOpen_zadanie38() 
+ {
+window.open("zadanie38_zabr.html","okienko_z38","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400");
+ }
+ function WinOpen_zadanie38_kod() 
+ {
+window.open("zadanie38_zabr_kod.html","okienko_z38_kod","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400");
+ }
+ function WinOpen_zadanie39() 
+ {
+window.open("zadanie39_zabr.html","okienko_z39","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400");
+ }
+ function WinOpen_zadanie39_kod() 
+ {
+window.open("zadanie39_zabr_kod.html","okienko_z39_kod","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400");
+ }
+  function WinOpen_zadanie40() 
+ {
+window.open("zadanie40_zabr.html","okienko_z40","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400");
+ }
+ function WinOpen_zadanie40_kod() 
+ {
+window.open("zadanie40_zabr_kod.html","okienko_z40_kod","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400");
+ }
  function okno_zamknij() 
  {
  window.close()
@@ -167,6 +215,19 @@ window.open("zadanie32_zabr_kod.html","okienko_z32_kod","toolbar=no,directories=
  <input type="button" name="zadanie31_kod" value="zadanie31_kod Zabrocki" onclick="WinOpen_zadanie31_kod(' ')">
  <input type="button" name="zadanie32" value="zadanie32 Zabrocki" onclick="WinOpen_zadanie32(' ')">
  <input type="button" name="zadanie32_kod" value="zadanie32_kod Zabrocki" onclick="WinOpen_zadanie32_kod(' ')">
+ <input type="button" name="zadanie35" value="zadanie35 Zabrocki" onclick="WinOpen_zadanie35(' ')">
+ <input type="button" name="zadanie35_kod" value="zadanie35_kod Zabrocki" onclick="WinOpen_zadanie35_kod(' ')">
+ <input type="button" name="zadanie36" value="zadanie36 Zabrocki" onclick="WinOpen_zadanie36(' ')">
+ <input type="button" name="zadanie36_kod" value="zadanie36_kod Zabrocki" onclick="WinOpen_zadanie36_kod(' ')">
+ <input type="button" name="zadanie37" value="zadanie37 Zabrocki" onclick="WinOpen_zadanie37(' ')">
+ <input type="button" name="zadanie37_kod" value="zadanie37_kod Zabrocki" onclick="WinOpen_zadanie37_kod(' ')">
+ <input type="button" name="zadanie38" value="zadanie38 Zabrocki" onclick="WinOpen_zadanie38(' ')">
+ <input type="button" name="zadanie38_kod" value="zadanie38_kod Zabrocki" onclick="WinOpen_zadanie38_kod(' ')">
+ <input type="button" name="zadanie39" value="zadanie39 Zabrocki" onclick="WinOpen_zadanie39(' ')">
+ <input type="button" name="zadanie39_kod" value="zadanie39_kod Zabrocki" onclick="WinOpen_zadanie39_kod(' ')">
+ <input type="button" name="zadanie40" value="zadanie40 Zabrocki" onclick="WinOpen_zadanie40(' ')">
+ <input type="button" name="zadanie40_kod" value="zadanie40_kod Zabrocki" onclick="WinOpen_zadanie40_kod(' ')">
+ 
  <input type="button" value="zamknij okno" onclick="okno_zamknij()"/>
  </form>
 </body>
