--- a/index.html
+++ b/index.html
@@ -166,15 +166,160 @@ window.open("zadanie39_zabr.html","okienko_z39","toolbar=no,directories=no,menub
  function WinOpen_zadanie39_kod() 
  {
 window.open("zadanie39_zabr_kod.html","okienko_z39_kod","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400");
- }
-  function WinOpen_zadanie40() 
- {
+}
+function WinOpen_zadanie40() 
+{
 window.open("zadanie40_zabr.html","okienko_z40","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400");
- }
+}
+function WinOpen_zadanie41() 
+{
+window.open("zadanie41_zabr.html","okienko_z41","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400");
+}
+function WinOpen_zadanie42() 
+{
+window.open("zadanie42_zabr.html","okienko_z42","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400");
+}
+function WinOpen_zadanie43() 
+{
+window.open("zadanie43_zabr.html","okienko_z43","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400");
+}
+function WinOpen_zadanie44() 
+{
+window.open("zadanie44_zabr.html","okienko_z44","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400");
+}
+function WinOpen_zadanie45() 
+{
+window.open("zadanie45_zabr.html","okienko_z45","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400");
+}
+function WinOpen_zadanie46() 
+{
+window.open("zadanie46_zabr.html","okienko_z46","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400");
+}
+function WinOpen_zadanie47() 
+{
+window.open("zadanie47_zabr.html","okienko_z47","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400");
+}
+function WinOpen_zadanie48() 
+{
+window.open("zadanie48_zabr.html","okienko_z48","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400");
+}
+function WinOpen_zadanie49() 
+{
+window.open("zadanie49_zabr.html","okienko_z49","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400");
+}
+function WinOpen_zadanie50() 
+{
+window.open("zadanie50_zabr.html","okienko_z50","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400");
+}
+function WinOpen_zadanie51() 
+{
+window.open("zadanie51_zabr.html","okienko_z51","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400");
+}
+function WinOpen_zadanie52() 
+{
+window.open("zadanie52_zabr.html","okienko_z52","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400");
+}
+function WinOpen_zadanie53() 
+{
+window.open("zadanie53_zabr.html","okienko_z53","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400");
+}
+function WinOpen_zadanie54() 
+{
+window.open("zadanie54_zabr.html","okienko_z54","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400");
+}
+function WinOpen_zadanie55() 
+{
+window.open("zadanie55_zabr.html","okienko_z55","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400");
+}
+function WinOpen_zadanie56() 
+{
+window.open("zadanie56_zabr.html","okienko_z56","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400");
+}
+function WinOpen_zadanie57() 
+{
+window.open("zadanie57_zabr.html","okienko_z57","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400");
+}
+function WinOpen_zadanie58() 
+{
+window.open("zadanie58_zabr.html","okienko_z58","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400");
+}
  function WinOpen_zadanie40_kod() 
  {
 window.open("zadanie40_zabr_kod.html","okienko_z40_kod","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400");
  }
+ function WinOpen_zadanie41_kod() 
+ {
+window.open("zadanie41_zabr_kod.html","okienko_z41_kod","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400");
+ }
+ function WinOpen_zadanie42_kod() 
+ {
+window.open("zadanie42_zabr_kod.html","okienko_z42_kod","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400");
+ }
+ function WinOpen_zadanie43_kod() 
+ {
+window.open("zadanie43_zabr_kod.html","okienko_z43_kod","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400");
+ }
+ function WinOpen_zadanie44_kod() 
+ {
+window.open("zadanie44_zabr_kod.html","okienko_z44_kod","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400");
+ }
+ function WinOpen_zadanie45_kod() 
+ {
+window.open("zadanie45_zabr_kod.html","okienko_z45_kod","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400");
+ }
+ function WinOpen_zadanie46_kod() 
+ {
+window.open("zadanie46_zabr_kod.html","okienko_z46_kod","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400");
+ }
+ function WinOpen_zadanie47_kod() 
+ {
+window.open("zadanie47_zabr_kod.html","okienko_z47_kod","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400");
+ }
+ function WinOpen_zadanie48_kod() 
+ {
+window.open("zadanie48_zabr_kod.html","okienko_z48_kod","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400");
+ }
+ function WinOpen_zadanie49_kod() 
+ {
+window.open("zadanie49_zabr_kod.html","okienko_z49_kod","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400");
+ }
+ function WinOpen_zadanie50_kod() 
+ {
+window.open("zadanie50_zabr_kod.html","okienko_z50_kod","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400");
+ }
+ function WinOpen_zadanie51_kod() 
+ {
+window.open("zadanie51_zabr_kod.html","okienko_z51_kod","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400");
+ }
+ function WinOpen_zadanie52_kod() 
+ {
+window.open("zadanie52_zabr_kod.html","okienko_z52_kod","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400");
+ }
+ function WinOpen_zadanie53_kod() 
+ {
+window.open("zadanie53_zabr_kod.html","okienko_z53_kod","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400");
+ }
+ function WinOpen_zadanie54_kod() 
+ {
+window.open("zadanie54_zabr_kod.html","okienko_z54_kod","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400");
+ }
+ function WinOpen_zadanie55_kod() 
+ {
+window.open("zadanie55_zabr_kod.html","okienko_z55_kod","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400");
+ }
+ function WinOpen_zadanie56_kod() 
+ {
+window.open("zadanie56_zabr_kod.html","okienko_z56_kod","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400");
+ }
+ function WinOpen_zadanie57_kod() 
+ {
+window.open("zadanie57_zabr_kod.html","okienko_z57_kod","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400");
+ }
+ function WinOpen_zadanie58_kod() 
+ {
+window.open("zadanie58_zabr_kod.html","okienko_z58_kod","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400");
+ }
+
  function okno_zamknij() 
  {
  window.close()
@@ -182,7 +327,7 @@ window.open("zadanie40_zabr_kod.html","okienko_z40_kod","toolbar=no,directories=
  </script>
  </head>
 <body>
- <a style="color:Red" font-size:"2cm" > Szkielet zaliczeniowy JavaScript Bartosz Zabrocki Klasa 3Fgr2 </a>
+ <a style="color:Red" font-size:"25px" > Szkielet zaliczeniowy JavaScript Bartosz Zabrocki Klasa 3Fgr2 </a>
  <form>
  <input type="button" name="zadanie1" value="zadanie1 Zabrocki" onclick="WinOpen_zadanie1(' ')">
  <input type="button" name="zadanie2" value="zadanie2 Zabrocki" onclick="WinOpen_zadanie2(' ')">
@@ -227,6 +372,43 @@ window.open("zadanie40_zabr_kod.html","okienko_z40_kod","toolbar=no,directories=
  <input type="button" name="zadanie39_kod" value="zadanie39_kod Zabrocki" onclick="WinOpen_zadanie39_kod(' ')">
  <input type="button" name="zadanie40" value="zadanie40 Zabrocki" onclick="WinOpen_zadanie40(' ')">
  <input type="button" name="zadanie40_kod" value="zadanie40_kod Zabrocki" onclick="WinOpen_zadanie40_kod(' ')">
+ <input type="button" name="zadanie41_kod" value="zadanie41_kod Zabrocki" onclick="WinOpen_zadanie41_kod(' ')">
+ <input type="button" name="zadanie42_kod" value="zadanie42_kod Zabrocki" onclick="WinOpen_zadanie42_kod(' ')">
+ <input type="button" name="zadanie43_kod" value="zadanie43_kod Zabrocki" onclick="WinOpen_zadanie43_kod(' ')">
+ <input type="button" name="zadanie44_kod" value="zadanie44_kod Zabrocki" onclick="WinOpen_zadanie44_kod(' ')">
+ <input type="button" name="zadanie45_kod" value="zadanie45_kod Zabrocki" onclick="WinOpen_zadanie45_kod(' ')">
+ <input type="button" name="zadanie46_kod" value="zadanie46_kod Zabrocki" onclick="WinOpen_zadanie46_kod(' ')">
+ <input type="button" name="zadanie47_kod" value="zadanie47_kod Zabrocki" onclick="WinOpen_zadanie47_kod(' ')">
+ <input type="button" name="zadanie48_kod" value="zadanie48_kod Zabrocki" onclick="WinOpen_zadanie48_kod(' ')">
+ <input type="button" name="zadanie49_kod" value="zadanie49_kod Zabrocki" onclick="WinOpen_zadanie49_kod(' ')">
+ <input type="button" name="zadanie50_kod" value="zadanie50_kod Zabrocki" onclick="WinOpen_zadanie50_kod(' ')">
+ <input type="button" name="zadanie51_kod" value="zadanie51_kod Zabrocki" onclick="WinOpen_zadanie51_kod(' ')">
+ <input type="button" name="zadanie52_kod" value="zadanie52_kod Zabrocki" onclick="WinOpen_zadanie52_kod(' ')">
+ <input type="button" name="zadanie53_kod" value="zadanie53_kod Zabrocki" onclick="WinOpen_zadanie53_kod(' ')">
+ <input type="button" name="zadanie54_kod" value="zadanie54_kod Zabrocki" onclick="WinOpen_zadanie54_kod(' ')">
+ <input type="button" name="zadanie55_kod" value="zadanie55_kod Zabrocki" onclick="WinOpen_zadanie55_kod(' ')">
+ <input type="button" name="zadanie56_kod" value="zadanie56_kod Zabrocki" onclick="WinOpen_zadanie56_kod(' ')">
+ <input type="button" name="zadanie57_kod" value="zadanie57_kod Zabrocki" onclick="WinOpen_zadanie57_kod(' ')">
+ <input type="button" name="zadanie58_kod" value="zadanie58_kod Zabrocki" onclick="WinOpen_zadanie58_kod(' ')">
+ <input type="button" name="zadanie41" value="zadanie41 Zabrocki" onclick="WinOpen_zadanie41(' ')">
+ <input type="button" name="zadanie42" value="zadanie42 Zabrocki" onclick="WinOpen_zadanie42(' ')">
+ <input type="button" name="zadanie43" value="zadanie43 Zabrocki" onclick="WinOpen_zadanie43(' ')">
+ <input type="button" name="zadanie44" value="zadanie44 Zabrocki" onclick="WinOpen_zadanie44(' ')">
+ <input type="button" name="zadanie45" value="zadanie45 Zabrocki" onclick="WinOpen_zadanie45(' ')">
+ <input type="button" name="zadanie46" value="zadanie46 Zabrocki" onclick="WinOpen_zadanie46(' ')">
+ <input type="button" name="zadanie47" value="zadanie47 Zabrocki" onclick="WinOpen_zadanie47(' ')">
+ <input type="button" name="zadanie48" value="zadanie48 Zabrocki" onclick="WinOpen_zadanie48(' ')">
+ <input type="button" name="zadanie49" value="zadanie49 Zabrocki" onclick="WinOpen_zadanie49(' ')">
+ <input type="button" name="zadanie50" value="zadanie50 Zabrocki" onclick="WinOpen_zadanie50(' ')">
+ <input type="button" name="zadanie51" value="zadanie51 Zabrocki" onclick="WinOpen_zadanie51(' ')">
+ <input type="button" name="zadanie52" value="zadanie52 Zabrocki" onclick="WinOpen_zadanie52(' ')">
+ <input type="button" name="zadanie53" value="zadanie53 Zabrocki" onclick="WinOpen_zadanie53(' ')">
+ <input type="button" name="zadanie54" value="zadanie54 Zabrocki" onclick="WinOpen_zadanie54(' ')">
+ <input type="button" name="zadanie55" value="zadanie55 Zabrocki" onclick="WinOpen_zadanie55(' ')">
+ <input type="button" name="zadanie56" value="zadanie56 Zabrocki" onclick="WinOpen_zadanie56(' ')">
+ <input type="button" name="zadanie57" value="zadanie57 Zabrocki" onclick="WinOpen_zadanie57(' ')">
+ <input type="button" name="zadanie58" value="zadanie58 Zabrocki" onclick="WinOpen_zadanie58(' ')">
+ 
  
  <input type="button" value="zamknij okno" onclick="okno_zamknij()"/>
  </form>
